Implementation of user registration logic
* fix create email index in user migration

* update local config and Makefile

* implementation of user registration handler, service and repo logic

* update swagger docs

* adding swagger and validation min/max value for password
