# docs/swagger.json
@@ -1,17 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "...",
-        "title": "Go API",
+        "description": "Authorization, registration, etc...",
+        "title": "Universal authorization service API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/ping": {
-            "get": {
-                "description": "do ping",
+        "/api/v1/users/register": {
+            "post": {
+                "description": "Register a new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,16 +19,84 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Users"
                 ],
-                "summary": "ping example",
+                "summary": "Register",
+                "operationId": "do-translate",
+                "parameters": [
+                    {
+                        "description": "Registration payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.registerRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/v1.registerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrResponse"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "response.ErrResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.registerRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "email@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 8,
+                    "example": "y0urP@ssw0rd"
+                }
+            }
+        },
+        "v1.registerResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "d13a75e2-3d21-4e57-9dc0-3a7f5bee4c25"
                 }
             }
         }
